--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>المرشد الأكاديمي الإفتراضي - كلية تربية نوعية - عين شمس</title>
 </head>
 
@@ -36,8 +36,7 @@
             </div>
     </main>
     <footer></footer>
-    <script src="JS/app.js"></script>
-    <script src="JS/form.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
