fix logo in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="logo">AM</div>
+        <div class="logo"></div>
         <h1>المرشد الأكاديمي الإفتراضي - كلية تربية نوعية - عين شمس</h1>
 
         <nav>
